# vocab_tools

./: .gitignore  README.md  example  pyproject.toml
docs/: about.html  conversion.html  index.html  search.json  validation.html  vocabularies.html
docs/example/: example.html  example.qmd
docs/site_libs/bootstrap/: bootstrap.min.css
docs/site_libs/quarto-html/: quarto-syntax-highlighting.css
docsrc/: _quarto.yml  about.qmd  conversion.qmd  index.qmd  styles.scss  validation.qmd  vocabularies.qmd
docsrc/example/: example.qmd
docsrc/example/data/: beer.ttl  example.ttl  example_nodefinition.ttl  example_notop.ttl  extension_example.ttl  extension_extension.ttl
example/: example.md
tests/: test_vocabstore.py
tests/data/: example.ttl  example_noconceptscheme.ttl  example_nolabel.ttl  extension_example.ttl
vocab_tools/: __init__.py  cli.py  sparqlr.py  tomarkdown.py
vocab_tools/data/: vocabulary_shape.ttl  vocabulary_shapeV2.ttl
