[tool.poetry]
name = "vocab-tools"
version = "0.1.0"
description = "Tools for validating and working with iSamples SKOS vocabularies."
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vocab_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7"
rich = "^13.4.2"
rdflib = "^6.3.2"
pyshacl = {git = "https://github.com/datadavev/pySHACL.git", rev = "report_metrics"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter = "^1.0.0"
graphviz = "^0.20.1"

[tool.poetry.group.service.dependencies]
rdflib-endpoint = {git = "https://github.com/vemonet/rdflib-endpoint.git", rev="main"}
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vocab = 'vocab_tools.cli:main'
